# shellexecuteex

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: after-merge.yaml  before-merge.yaml  build.yaml  common-build.yaml
scripts/: code-coverage.ps1
src/: CMakeLists.txt  cleanup.cpp  cleanup.h  common.h  known-folders.cpp  known-folders.h  log.h  main-internal.cpp  main-internal.h  main.cpp  message-pump.cpp  message-pump.h  prefs.cpp  prefs.h  resources.h  resources.rc.in  shellexecuteex.cpp  show-window-command.cpp  show-window-command.h  usage.cpp  usage.h  windows-api.cpp  windows-api.h
src/tests/: help.cpp  main-coinitialize.cpp  main-return.cpp  mocks.h  prefs-api.cpp  prefs-flags.cpp  prefs-item-id-list-from-display-name.cpp  prefs-relay-exit-code.cpp  prefs-scenarios.cpp  prefs-shell-display-name.cpp  prefs-show.cpp  prefs-string-arguments.cpp  prefs-usage.cpp  prefs.cpp  run-scenarios.cpp  test-common.h  test-helpers.cpp  test-main.cpp  test_common.h  test_main.cpp
src/tests/functional/: help.cpp  prefs-flags.cpp  prefs-item-id-list-from-display-name.cpp  prefs-item-id-list-from-known-folder-id.cpp  prefs-relay-exit-code.cpp  prefs-scenarios.cpp  prefs-show.cpp  prefs-string-arguments.cpp  prefs-usage.cpp  run-scenarios.cpp  usage.cpp
src/tests/unit/: help.cpp  known-folders.cpp  main-coinitialize.cpp  main.cpp  prefs.cpp  show-window-command.cpp  usage.cpp
